ضعخف ثقشف يثوخرسفقشريعو

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- مخقثو هحسعو يخمخق سهف شوثف ---->
     <meta charset="utf-8"/>
     <title>Fatih Erikli</title>
     <link rel="stylesheet" href="tufte.css"/>
@@ -197,13 +198,11 @@
           </tr>
         </table>
       </section>
-
-
       <section style="margin-top: 0">
         <h2 id="epilogue"><br> Things I'm Proud of</h2>
         <ul>
           <li>I was a co-organizer of a generative-art hackathon <i>(otomat.org)</i></li>
-          <li>I rode tandem bike with a blind person from Istanbul to Bartin (300kms away from Istanbul).</li>
+          <li>I rode tandem bike with a blind person from İSTANBUL to BARTIN (300kms away from Istanbul).</li>
           <li>I give Python courses to highschool students since 2014, and some of them working as a software engineer now.</li>
           <li>Dictdiffer (a project I created) is maintaining by a team part of CERN. <i>(dictdiffer.readthedocs.org)</i></li>
         </ul>
@@ -214,4 +213,5 @@
       </section>
     </article>
   </body>
+  <!-- ضعخف ثقشف يثوخرسفقشريعو ---->
 </html>
