--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         margin-left: -0.2em
       ">
           <h1 id="tufte-css" style="display: inline-block;">Fatih Erikli</h1>
+          <h2>بشفها ثقهنمه</h2>
         <br />
         <span class="subtitle" style="
           margin-top: -1em;
