--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 BEGIN
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="فق">
   <head>
     <!-- مخقثو هحسعو يخمخق سهف شوثف ---->
     <meta charset="utf-8"/>
