--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-BEGIN
-
-<!DOCTYPE html>
-<html lang="فق">
+<!-- lorem ipsum dolor sit amet -->
+<html lang="tr">
   <head>
-    <!-- مخقثو هحسعو يخمخق سهف شوثف ---->
     <meta charset="utf-8"/>
     <title>Fatih Erikli</title>
     <link rel="stylesheet" href="tufte.css"/>
@@ -216,7 +213,5 @@ BEGIN
       </section>
     </article>
   </body>
-  <!-- ضعخف ثقشف يثوخرسفقشريعو ---->
 </html>
-
-QUOT ERAT DEMONSTRANDUM
+ <!-- ضعخف ثقشف يثوخرسفقشريعو ---->
