--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- lorem ipsum dolor sit amet -->
 <html lang="tr">
   <head>
     <meta charset="utf-8"/>
@@ -22,7 +21,6 @@
         margin-left: -0.2em
       ">
           <h1 id="tufte-css" style="display: inline-block;">Fatih Erikli</h1>
-          <h2>بشفها ثقهنمه</h2>
         <br />
         <span class="subtitle" style="
           margin-top: -1em;
@@ -99,7 +97,7 @@
           <tr><td colspan="2"><hr /></td></tr>
 
           <tr>
-            <th>Senior Software Engineer at Adphorus</th>
+            <th>Senior Software Engineer at a Travel Advertisement Company</th>
             <td width="20%"></td>
           </tr>
           <tr>
@@ -146,8 +144,6 @@
             </td>
           </tr>
 
-          
-
           <tr>
             <th>Python Evengalist at Metglobal</th>
             <td width="20%"></td>
@@ -167,18 +163,18 @@
           <tr><td colspan="2"><hr /></td></tr>
 
           <tr>
-            <th>Junior Front-end Developer at Vatan Newspaper</th>
+            <th>BAGIMSIZ GAZETECILER A.S.</th>
             <td width="20%"></td>
           </tr>
           <tr>
             <td>
-              Istanbul/Turkey Dogan Media Center
+              Istanbul
             </td>
             <td><time>2010 - 2010</time></td>
           </tr>
           <tr>
             <td colspan="2">
-              Vatan is a Daily Newspaper published in Turkey. I was responsible for the web version of newspaper. I developed main news page and sub sites of it.
+              I was responsible for the development and maintenance of a journal. I also made a data-visualization of election results.
             </td>
           </tr>
 
@@ -214,4 +210,3 @@
     </article>
   </body>
 </html>
- <!-- ضعخف ثقشف يثوخرسفقشريعو ---->
