--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </ul>
       </section>
       <section>
-        <h2 id="epilogue"><br> Legal things</h2>
+        <h2 id="epilogue"><br> References available upon request.</h2>
 
       </section>
     </article>
